logs/xl2py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xl2py'...
Listing './lib/python3.5/site-packages/xl2py/com_handlers'...
Listing './lib/python3.5/site-packages/xl2py/conversion_lib'...
Listing './lib/python3.5/site-packages/xl2py/core'...
Compiling './lib/python3.5/site-packages/xl2py/core/constructor.py'...
***   File "./lib/python3.5/site-packages/xl2py/core/constructor.py", line 28
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 635-636: truncated \UXXXXXXXX escape

Listing './lib/python3.5/site-packages/xl2py-1.0.4b0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
